# wanted

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Untitled.ipynb  company_name.csv  conftest.py  db_uploader.py  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  wait_for_postgres.py  wanted_temp_data.csv
.envs/: .local.postgres
.github/workflows/: pull_request.yml
apps/: urls.py  wsgi.py
apps/company_info/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/company_info/management/commands/: insert_company_db.py  insert_company_name_db.py  insert_lang_db.py  insert_tag_db.py
apps/company_info/migrations/: 0001_initial.py  0002_auto_20211109_0742.py
apps/company_info/tests/: test_views.py
apps/config/: common.py  local.py  production.py  test.py
apps/core/: authentications.py  serializers.py
apps/core/management/commands/: dummy.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_viewsets.py
csv/: company_name.csv  company_tag.csv
docker/compose/: local.yml  prod.yml
docker/images/local/: Django.Dockerfile  start
docker/images/prod/: Django.Dockerfile  Nginx.Dockerfile  nginx.conf  start
docs/: index.md
docs/api/: users.md
test/factories/: __init__.py  company_info.py  users.py
test/schema/: __init__.py  users.py
